fixed word container floating at bottom on mobile

--- a/index.css
+++ b/index.css
@@ -92,7 +92,7 @@ body {
     background-color: #FF9393;
     border-radius: 10px;
     width: 100%;
-    height: 25%;
+    /* height: 25%; this was the infamous bug */ 
     display: grid;
 }
 
@@ -170,13 +170,6 @@ body {
 }
 
 @media (min-width: 768px) {
-
-    #pedestal {
-        border-radius: 15px;
-        margin: 0 20vw;
-        height: 70vh;
-        background: #004665
-    }
 
     #game-container {
         width: 100%;
